24-07-05    Missing form name added, without which it was impossible to create new articles
21-07-05    Fixed inability to edit org types
20-07-05    Implemented boundary checks for section edit
20-07-05    Removed shop-related sections from mysql data
17-07-05    Fixed sections listed in blocks mgr, 'none' now correctly reads
            'all sections'

IMPROVEMENTS
16-08-05    Added ability to customise default theme's stylesheets non-invasively
            (Pierpaolo Toniolo, AJ Tarachanowicz)
04-08-05    Fixed sorting for Users, Roles and Permissions (Rolandas Burbulis)
21-07-05    Database password field in Config changed to 'password' type (Paul Vickers)
17-07-05    All table names are now config driven
15-07-05    Articles now editable in situ
14-07-05    Improved w3c compliance by removing 'name' attribute from some forms
13-07-05    Related documents only displayed next to articles if they exist
13-07-05    Added article summariser method that preserves HTML formatting and
            cleaned up article listing - ArticleViewMgr::summary()
13-07-05    Added 'recent articles' block (Werner Krauss)
10-07-05    Usernames can now be as short as 3 chars (Michael Heuberger)

+-----------------------+
| VERSION: 0.4.4        |
+-----------------------+
BUGFIXES
06-07-05    Fixed incorrect redirect following a 'Reset password' action invoked by
            admin
06-07-05    Updated PEAR xml-rpc lib with security flaw            
05-07-05    Fixed bug where non-alpha chars in config site name would cause parse
            error (STB Land)
04-07-05    Adding a block redirected to a blank screen - fixed
04-07-05    Removed stray comma that killed FCK editor for msie (Ori Shiloh)
04-07-05    Changed use of document.all to document.getElementById in installer (Leo 
            Lijstenmaker)
03-07-05    Removed reference to $_SERVER['REQUEST_URI'] in SimpleNav (Tony Oliver) that
            would cause non-Apache environments to fail